[package]
name = "clap-adapters"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clap-adapter"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive", "env"] }
notify = "6.1.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"


[dev-dependencies]
anyhow = "1.0.75"
tempfile = "3.8.1"
